deployment/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrp-aime
  labels:
    app.kubernetes.io/name: nrp-aime
spec:
  ingressClassName: haproxy
  rules:
    - host: access-nrp.nrp-nautilus.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - access-nrp.nrp-nautilus.io
